# statsig-client

./: .gitignore  Cargo.toml  LICENSE.MIT  README.md  publish.sh
.github/workflows/: ci.yml  release.yml
examples/: real_data_test.rs
src/: api.rs  batch.rs  cache_metrics.rs  config.rs  error.rs  events.rs  lib.rs  response.rs  transport.rs  user.rs
